# Serialization

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
src/: ByteArray.h  List.h  PrimaryTx.h  Signatory.h  Signature.h  SigningTx.h  TxWireData.h  identity.h  main.cpp
tests/: CMakeLists.txt  main.cpp  tests.cpp
